--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 # Redirect all unknown routes to 404
 [[redirects]]
   from = "/*"
-  to = "/404"
+  to = "/404.html"
   status = 404
 
 # Cache settings
