Fix formatting issues in config.yml

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -13,9 +13,10 @@ collections:
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "string" }
-      - { label: "Author", name: "author", widget: "string", default: ["Maroof Lone"]}
+      - { label: "Author", name: "author", widget: "string", default: "Maroof Lone"}
       - { label: "Date", name: "date", widget: "datetime" }
-      - { label: "Tags", name: "tags", widget: "list", default: ["post"] }
+      - { label: "Tags", name: "tags", widget: "list", default: "post" }
       - { label: "Featured Image", name: "image", widget: "image" }
       - { label: "Image Caption", name: "imageAlt", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+
